--- a/layout-2/index.html
+++ b/layout-2/index.html
@@ -2,23 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Layout 1</title>
+  <title>Layout 2</title>
   <link rel="stylesheet" type="text/css" href="./styles/style.css">
 </head>
 <body>
-
-  <header>
-    header
-  </header>
+  <header>header</header>
 
   <div class="container clearfix">
+    <aside>aside left</aside>
     <main>main</main>
-    <aside>aside</aside>
+    <aside>aside right</aside>
   </div>
 
-  <footer>
-    footer
-  </footer>
+  <footer>footer</footer>
+
   
 </body>
 </html>
