perfect align small box

--- a/layout-4/layout-4.html
+++ b/layout-4/layout-4.html
@@ -19,7 +19,7 @@
   <main>main</main>
   <div class="container clearfix">
     <div class="small">div1</div>
-    <div class="small">div2</div>
+    <div class="small" id="middle">div2</div>
     <div class="small">div3</div>
   </div>
   <footer>footer</footer>
