add video follow along version

--- a/layout-5/index.html
+++ b/layout-5/index.html
@@ -7,7 +7,33 @@
 </head>
 <body>
 
-  <header class="graybox">Header</header>
+  <header class="clearfix">Header
+    <div class="graybox logo">Logo</div>
+    <nav class="clearfix">
+      <div class="graybox navitem space">Item 5</div>
+      <div class="graybox navitem space">Item 4</div>
+      <div class="graybox navitem space">Item 3</div>
+      <div class="graybox navitem space">Item 2</div>
+      <div class="graybox navitem space">Item 1</div>
+    </nav>
+  </header>
+
+  <main class="clearfix">
+    <aside class="graybox">Aside</aside>
+    <div class="article clearfix">
+      <div class="graybox firstrow">Row 1</div>
+      <div class="secondrow clearfix">
+        <div class="graybox words">Words</div>
+        <div class="graybox ads">Ads</div>
+      </div>
+      <div class="thirdrow clearfix">
+        <div class="graybox smallitem">Item 1</div>
+        <div class="graybox smallitem">Item 2</div>
+        <div class="graybox smallitem">Item 3</div>
+        <div class="graybox smallitem">Item 4</div>
+      </div>
+    </div>
+  </main>
 
   <footer class="graybox">Footer</footer>
   
